# virtual-life-ai

./: .cursorrules  .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  SETUP.md  TECHNICAL_SPECS.md  pyproject.toml  refactoring_recommendations.md  refactoring_summary.md
.cursor/rules/: derived-cursor-rules.mdc
.specstory/cursor_rules_backups/: derived-cursor-rules.mdc.2025-03-12T02-12-28-706Z  derived-cursor-rules.mdc.2025-03-12T02-14-34-558Z  derived-cursor-rules.mdc.2025-03-12T02-20-33-349Z  derived-cursor-rules.mdc.2025-03-12T02-21-33-571Z  derived-cursor-rules.mdc.2025-03-12T02-22-34-009Z  derived-cursor-rules.mdc.2025-03-12T02-24-01-176Z  derived-cursor-rules.mdc.2025-03-12T02-32-07-794Z  derived-cursor-rules.mdc.2025-03-12T02-33-33-687Z  derived-cursor-rules.mdc.2025-03-12T02-34-34-973Z  derived-cursor-rules.mdc.2025-03-12T02-45-26-857Z  derived-cursor-rules.mdc.2025-03-12T02-46-28-457Z  derived-cursor-rules.mdc.2025-03-12T02-53-21-140Z  derived-cursor-rules.mdc.2025-03-12T02-59-04-349Z  derived-cursor-rules.mdc.2025-03-12T03-04-42-591Z  derived-cursor-rules.mdc.2025-03-12T03-06-27-379Z
.specstory/history/: 2025-03-12_10-00-virtuallife-project-roadmap-and-specifications.md  2025-03-12_10-41-improving-project-specifications-for-ai.md  2025-03-12_11-03-git-commit-and-push-instructions.md  2025-03-12_11-06-untitled.md
docs/architecture/: ecs.md  environment.md  index.md  type_system.md
docs/user/: cli_usage.md
examples/configs/: default.yaml  large_square.yaml  small_grid.yaml  wide_grid.yaml
tests/functional/: test_default_config.py  test_end_to_end.py  test_simulation_run.py
tests/integration/: __init__.py  test_config_integration.py  test_ecs_environment_integration.py  test_ecs_events_integration.py  test_full_simulation.py
tests/unit/: test_cli.py  test_components.py  test_config.py  test_entity.py  test_environment.py  test_runner.py  test_visualization.py
tests/unit/ecs/: test_component.py  test_entity.py  test_system.py  test_world.py
tests/unit/environment/: test_boundary.py  test_grid.py  test_resources.py
tests/unit/events/: __init__.py  test_dispatcher.py  test_handlers.py  test_integration.py
tests/unit/types/: test_core.py
virtuallife/: __init__.py  cli.py
virtuallife/config/: __init__.py  loader.py  models.py
virtuallife/ecs/: README.md  __init__.py  component.py  entity.py  system.py  world.py
virtuallife/environment/: README.md  __init__.py  boundary.py  grid.py  resources.py
virtuallife/events/: README.md  __init__.py  dispatcher.py  handlers.py  types.py
virtuallife/simulation/: components.py  entity.py  environment.py  factory.py  runner.py
virtuallife/types/: __init__.py  core.py
virtuallife/visualize/: base.py  console.py  plotting.py
