[tool.poetry]
name = "virtuallife"
version = "0.1.0"
description = "A flexible artificial life simulator"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/yourusername/virtual-life-ai"
documentation = "https://virtual-life-ai.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Life",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
scipy = "^1.10.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
pygame = "^2.4.0"
click = "^8.1.0"
pyyaml = "^6.0.0"
h5py = "^3.8.0"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"
pre-commit = "^3.3.2"
sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.2.0"

[tool.poetry.scripts]
virtuallife = "virtuallife.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=virtuallife --cov-report=xml --cov-report=term" 